Add print stylesheet, and other fixes

--- a/slides.md.html
+++ b/slides.md.html
@@ -13,9 +13,25 @@ Zefram Cochrane
 >>> presenter notes
 >>> look like this
 
-# Test
+# testing this massive headline testing this massive headline testing this massive headline testing this massive headline testing this massive headline
+
+---
+
+## Test
 
 need to make sure that all font sizes, margins, paddings, widths and heights are defined in terms of %, rem or em so that they scale properly
+
+press n to open window with presenter notes (might open as a tab in the background), define them using three nested blockquotes. they update as you move between slides
+
+i recommend using only local resources (images, fonts, a local copy of mathjax) unless you're absolutely sure you'll have connectivity where you'll be holding your presentation. to download fonts from google fonts, use https://google-webfonts-helper.herokuapp.com/fonts.
+
+---
+
+alternatively, you can generate a pdf version of your presentation by simply printing it to pdf using your browser's built-in tools – in my experience, this works best in chrome since it respect the `@page` CSS selector properly. set margines to none and make sure to keep the background graphics option enabled.
+
+```
+>>> presenter notes
+```
 
 ---
 
@@ -97,6 +113,7 @@ more
 <link rel="stylesheet" type="text/css" href="markdeep-slides-print.css" media="print">
 <link rel="stylesheet" type="text/css" href="slides-theme-simple.css">
 <script src="markdeep-slides.js"></script>
+<script>markdeepSlidesOptions = {mode: 'prod', aspectRatio: 4/3}</script>
 <script>markdeepOptions={tocStyle:'none', onLoad: function() { initSlides(); }}</script>
 <style class="fallback">body{visibility:hidden}</style>
 <script src="markdeep.js"></script>
