Improve presenter notes

--- a/slides.md.html
+++ b/slides.md.html
@@ -11,7 +11,9 @@ Zefram Cochrane
 ---
 
 >>> presenter notes
->>> look like this
+>>>
+>>> * look like this
+>>> * or like this
 
 # testing this massive headline testing this massive headline testing this massive headline testing this massive headline testing this massive headline
 
