--- a/slides.md.html
+++ b/slides.md.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8" lang="en">
 
 **Building presentation slides with markdeep**
-    PowerPoint? I hardly know her!
+    Acrobat Reader? I hardly know her!
 
 Your name here<br>
 <span class="small accent">June 8, 2019</span>
