Add options for font size and slide number color

--- a/slides.md.html
+++ b/slides.md.html
@@ -227,7 +227,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <link rel="stylesheet" type="text/css" href="markdeep-slides.css">
 <link rel="stylesheet" type="text/css" href="slides-theme-simple.css">
-<script>markdeepSlidesOptions = {aspectRatio: 16 / 9}</script>
+<script>markdeepSlidesOptions = {aspectRatio: 16 / 9, fontSize: 28, slideNumberColor: "#bbb"}</script>
 <script>markdeepOptions={tocStyle:'none', onLoad: function() { initSlides(); }}</script>
 <script src="markdeep-slides.js"></script>
 <style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style>
