Fix #3: Presenter notes are now shown below each slide in draft mode, with all the rejiggering that went along with introducing this feature

--- a/slides.md.html
+++ b/slides.md.html
@@ -52,6 +52,7 @@ Press...
 * <kbd>↑</kbd>, <kbd>←</kbd> or <kbd>PgUp</kbd> to go to the next slide,
 * <kbd>F</kbd>, <kbd>F5</kbd> or <kbd>Esc</kbd> to enter or exit fullscreen presentation mode and
 * <kbd>.</kbd> to turn the screen black (and back again).
+* <kbd>n</kbd> to open a window with your presenter notes (more on the next slide).
 
 These little presenter clicker thingies should work no problem.
 
@@ -66,16 +67,17 @@ These little presenter clicker thingies should work no problem.
 
 ## Presenter notes
 
-Press <kbd>n</kbd> to open a **window with the presenter notes**. They will update as you move between slides. All **shortcuts work** even when the presenter notes window is focused.
+Press <kbd>n</kbd> to open a **window with the presenter notes** and a basic clock. They will update as you move between slides. All **shortcuts work** even when the presenter notes window is focused.
 
 Presenter notes **support Markdeep** and can be **defined using three nested blockquotes**, like so:
 
 ```markdown
 >>> Don't just read what's *on* the slides out loud, ya loon.
 >>> Here's some additional information:
->>>
 >>> * Cats are cute.
 ```
+
+In draft mode, presenter notes are shown below each slide.
 
 ---
 
