--- a/slides.md.html
+++ b/slides.md.html
@@ -227,6 +227,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+<link rel="stylesheet" type="text/css" href="markdeep-slides-reset.css">
 <link rel="stylesheet" type="text/css" href="markdeep-slides.css">
 <link rel="stylesheet" type="text/css" href="slides-theme-simple.css">
 <script>markdeepSlidesOptions = {aspectRatio: 16 / 9, fontSize: 28, slideNumberColor: "#bbb"}</script>
